graphQL_application_example/kustomization/graphql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-service
  namespace: graphql-example
  labels:
    app: graphql
    service: graphql
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: graphql
