graphQL_application_example/kustomization/graphql/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: graphql-virtual-service
  namespace: graphql-example
spec:
  hosts:
    - "*"
  gateways:
    - service-gateway
  http:
    - match:
        - uri:
            prefix: "/graph"
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 8080
            host: graphql-service
